# API-Tracker

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  nixpacks.toml  pyproject.toml  schema.sql
.claude/hooks/: session-start.sh
apitracker/: __init__.py  cli.py  config.py  db.py  pricing.py  server.py  tracker.py  usage.py
apitracker/providers/: __init__.py  anthropic.py  gemini.py  openai.py  perplexity.py
clients/python/: README.md  pyproject.toml
clients/python/apitracker_client/: __init__.py
tests/: test_db.py  test_dimensions.py  test_pricing.py  test_server.py  test_usage.py
