[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-tracker"
version = "0.1.0"
description = "Track and separate LLM API usage (Anthropic, OpenAI, Perplexity) per app for billing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
# Provider SDKs are optional -- install only the ones your apps use.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]          # also used for Perplexity (OpenAI-compatible)
all = ["anthropic>=0.40", "openai>=1.40"]
dev = ["pytest>=8"]

[project.scripts]
apitracker = "apitracker.cli:main"

[tool.setuptools.packages.find]
include = ["apitracker*"]
