[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apitracker-client"
version = "0.1.0"
description = "Tiny Python client for the API-Tracker ingest service (HTTP, no DB credentials)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []   # standard library only

[tool.setuptools.packages.find]
include = ["apitracker_client*"]
